# pexw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  pexw.c  pexw_cross.c
.github/workflows/: cmake-multi-platform.yml
